--- a/popular-movies-app/app/src/main/AndroidManifest.xml
+++ b/popular-movies-app/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hsu.android.popularmovies">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.udacity.android.app">
 
     <application
         android:allowBackup="true"
@@ -18,8 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".MovieDetailsActivity"></activity>
     </application>
 
 </manifest>
