--- a/popularmoviesapp2/app/src/main/AndroidManifest.xml
+++ b/popularmoviesapp2/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         </activity>
         <activity android:name=".MovieDetailsActivity"
             android:label="@string/app_name"></activity>
+
+        <activity android:name=".ReviewsActivity"
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
