--- a/BakingRecipes/app/src/main/AndroidManifest.xml
+++ b/BakingRecipes/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:configChanges="orientation|screenSize">
+            android:configChanges="screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
