--- a/JokeFactory/app/build.gradle
+++ b/JokeFactory/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
+    implementation project(":JokerJava")
 }
