--- a/Capstone_Stage2/app/build.gradle
+++ b/Capstone_Stage2/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.8.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+
 }
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
