--- a/Capstone_Stage2/app/src/main/AndroidManifest.xml
+++ b/Capstone_Stage2/app/src/main/AndroidManifest.xml
@@ -12,7 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainMenuActivity"></activity>
+        <activity
+            android:name=".ui.PodcastListActivity"
+            android:label="@string/title_podcast_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".ui.PodcastDetailActivity"
+            android:label="@string/title_podcast_detail"
+            android:parentActivityName=".ui.PodcastListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.udacity.android.podcastbemine.ui.PodcastListActivity" />
+        </activity>
+        <activity android:name=".ui.MainMenuActivity" />
         <activity
             android:name=".ui.SearchActivity"
             android:theme="@style/AppTheme.NoActionBar" />
