--- a/Capstone_Stage2/app/src/main/AndroidManifest.xml
+++ b/Capstone_Stage2/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.PlayPodcastActivity"></activity>
         <activity
             android:name=".ui.PodcastListActivity"
             android:label="@string/title_podcast_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.PodcastDetailActivity"
             android:label="@string/title_podcast_detail"
