--- a/FirebaseTest/app/src/main/AndroidManifest.xml
+++ b/FirebaseTest/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchEntry"></activity>
+        <activity android:name=".DeleteEntry"></activity>
+        <activity android:name=".SearchEntry" />
         <activity android:name=".AddEntry" />
         <activity android:name=".MainActivity">
             <intent-filter>
