add keystore and make installRelease available

--- a/Capstone_Stage2/app/build.gradle
+++ b/Capstone_Stage2/app/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'com.android.application'
 android {
+    signingConfigs {
+        release {
+            keyAlias 'key0'
+            keyPassword 'totoro'
+            storeFile file('keystore.jks')
+            storePassword 'totoro'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.udacity.android.podcastbemine"
@@ -13,6 +21,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
