--- a/BuildItBigger/app/build.gradle
+++ b/BuildItBigger/app/build.gradle
@@ -1,4 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.cloud.tools.endpoints-framework-client'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.google.cloud.tools:endpoints-framework-gradle-plugin:1.0.3'
+    }
+}
 
 android {
     compileSdkVersion 28
@@ -27,6 +37,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     // for AdMob
     implementation 'com.google.android.gms:play-services-ads:17.1.1'
+    implementation 'com.google.api-client:google-api-client:1.23.0'
+    implementation 'com.google.http-client:google-http-client-android:1.23.0'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation project(":javaJoker")
     implementation project(":jokefactory")
+    endpointsServer project(path: ':backend', configuration: 'endpoints')
+
 }
