--- a/BuildItBigger/app/build.gradle
+++ b/BuildItBigger/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     // for AdMob
     implementation 'com.google.android.gms:play-services-ads:17.1.1'
     implementation 'com.google.api-client:google-api-client:1.23.0'
