--- a/BuildItBigger/app/build.gradle
+++ b/BuildItBigger/app/build.gradle
@@ -26,6 +26,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "version"
+    productFlavors {
+        free {
+            dimension "version"
+            applicationId "com.udacity.android.builditbigger.free"
+            versionName "1.0.0­free"
+        }
+
+        paid {
+            dimension "version"
+            applicationId "com.udacity.android.builditbigger.paid"
+            versionName "1.0.0­paid"
+        }
+    }
 }
 
 dependencies {
