--- a/xyz-reader/XYZReader/build.gradle
+++ b/xyz-reader/XYZReader/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation "com.android.support:cardview-v7:$androidSupportVersion"
     implementation 'com.squareup.okhttp3:okhttp:3.1.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.android.support:design:$androidSupportVersion"
+
 
     implementation files('libs/volley.jar')
 }
